# cybergym

./: .gitignore  .gitmodules  CLAUDE.md  pyproject.toml  run_eval.py  web_db_viewer.py
design_docs/: CODEBASE_INFRASTRUCTURE_ANALYSIS.md  EVALUATION_PIPELINES.md  EXTENSION.md  FLARE_ON_SETUP.md  FLARE_ON_SUMMARY.md  GRADING_SCHEMA_CHANGES.md  JUDGE_DESIGN_ANALYSIS.md  PHASE1_SUMMARY.md  PHASE2_IMPLEMENTATION.md  PHASE2_SUMMARY.md  PHASE3_QUICK_REFERENCE.md  PHASE3_SUMMARY.md  PHASE3_VERIFICATION.txt  PHASE6_JUDGE_DESIGN.md  PROMPT_IMPROVEMENTS.md  RESTRUCTURING_CHANGES.md  server.md
prompts/: classifier_prompt.md  reporter_prompt.md
scripts/: build_arvo_ce.sh  clang_extract_function.py  cleanup_modal_logs.py  compile_clean_fuzzer_agent.py  decompile_fuzzer.py  deploy_gcp.py  extract_build_artifacts.py  extract_clang_lib.py  extract_libs.py  extract_linked_libs.py  extract_standalone_functions.py  extract_standalone_lib.py  gen_compile_commands.sh  gen_compile_commands_bear.sh  generate_report_summary.py  get_poc_sizes.py  launch_compiler_agent.py  launch_report_agents.py  old_extract_standalone_lib.sh  run_all_levels.sh  verify_poc_on_fixed_code.py
scripts/defcon_exploits/: babytrace_exploit.py  mra_exploit.py  nooopster_exploit.py  ooobash_exploit.py  tiamat_exploit.py
scripts/judge_scripts/: run_judge_batch.py  run_judge_variance.py
src/cybergym/eval/: __init__.py  client.py  grading_schemas.json  judge_parser.py  judge_scoring.py  metrics.py  orchestrator.py  paths.py  reporter.py  types.py
src/cybergym/judge/: __init__.py  cli.py  judge.py  openhands_judge.py  run_judge.py
src/cybergym/server/: __main__.py  compiler_agent_prompt.md  modal_server.py  pocdb.py  server_utils.py  types.py
src/cybergym/task/: no_fuzz.c  (+22 more)
task_lists/: anthropic-arvo-successful-tasks.csv  arvo-100-balanced.csv  cybergym_subset.csv  defcon-ooo.csv  flare-on-2024.csv  google.csv  test.csv
(+6 files in other folders)
